--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fpdo/fluentpdo": "^1.1",
         "swiftmailer/swiftmailer": "^6.0",
         "filp/whoops": "^2.1",
-        "nesbot/carbon": "^1.22"
+        "nesbot/carbon": "^1.22",
+        "riimu/kit-csrf": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.4",
